Changed text when on iPhone 4 to avoid pushing content over device bounds

--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -67,3 +67,14 @@
   max-height: 50px;
   height: 50px!important;
 }
+
+@media all and (max-width: 320px) {
+  .footer-email {
+    span {
+      display: none;
+    }
+    &:after {
+      content: 'Email us';
+    }
+  }
+}
